http_hub_cluster/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imager-server
  labels:
    app: imager-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: imager-server
  template:
    metadata:
      labels:
        app: imager-server
    spec:
      containers:
        - name: https
          image: "registry.redhat.io/rhscl/httpd-24-rhel7"
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          tty: true
          stdin: true
          volumeMounts:
          - mountPath: /var/www/html/iso_share
            name: iso-share
#          serviceAccount: default
      volumes:
      - name: iso-share
        hostPath:
            path: /home/kni/acm/mirror_registry/image_place_holder
      terminationGracePeriodSeconds: 5
