http_hub_cluster/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: imager-server
  name: imager-server
spec:
  ports:
  - name: httpd
    port: 777
    protocol: TCP
    targetPort: 8080
  selector:
    app: imager-server
  sessionAffinity: None
  type: ClusterIP
